# ZeroNet

./: .gitignore  README.md  devlog.md  pyproject.toml
.github/workflows/: static.yml
docs/: index.html  script.js  style.css
tests/: test_connection.py  test_crypto.py  test_discovery.py  test_protocol.py  test_tui_commands.py
zeronet/: __init__.py  main.py  tui.py
zeronet/crypto/: __init__.py  manager.py
zeronet/network/: __init__.py  connection.py  discovery.py  protocol.py
zeronet/ui/: __init__.py  main_window.py  styles.py  widgets.py
